AssertJSwing JPMS mismatch: aggiunta fix al pom, non vale in Eclipse
	- aggiunto al pom un custom arg alla JVM per surefire
	- in Eclipse creata una Run Configuration 'AssertJSwing JPMS fix'
		- va richiesta esplicitamente ed esegue tutti i @GUITest