@@ -161,8 +161,23 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- custom JVM args to alleviate the AssertJ Swing - JPMS mismatch -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.desktop/java.awt=ALL-UNNAMED
+						--add-opens java.desktop/javax.swing=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
-		
+
 		<!-- sets exclusion rules for some resource folders  -->
 		<resources>
 			<resource> 
